Fix Overflowing roles

--- a/src/components/teamList/teamListEntry/style.css
+++ b/src/components/teamList/teamListEntry/style.css
@@ -6,6 +6,7 @@
   align-items: center;
   flex-direction: column;
   position: relative;
+  text-align: center;
 }
 
 .teamListEntryImageContainer {
@@ -34,6 +35,7 @@
 .teamListEntry p {
   margin-top: 10px;
   transition: color 0.2s linear;
+  width: 250px;
 }
 
 .teamTextActive {
@@ -48,7 +50,7 @@
   position: absolute;
   z-index: -10;
   top: -80px;
-  height: 430px;
+  height: 470px;
 }
 
 .teamListEntryBubble {
